--- a/app/style/app.css
+++ b/app/style/app.css
@@ -141,3 +141,11 @@ font {
 .ClassNeon:hover{
     color: orangered;
 }
+
+/* notification{
+    position: fixed;
+    display: block;
+    top: 35px;
+    width: 100%;
+    height: 25px;
+} */
